FIX: layout issues and what not after adding missing css

--- a/app/me/components/profile.module.css
+++ b/app/me/components/profile.module.css
@@ -1,3 +1,7 @@
 #profileViewUserAvatar {
   --size: 200px;
 }
+
+#profileViewHeader {
+  margin: 0;
+}
